<resources>
    <string name="app_name">Glass Desert</string>
    <string name="btn_misc_label">Misc</string>
    <string name="btn_cohort_label">Cohort</string>
    <string name="btn_overview_label">Overview</string>
    <string name="btn_buildings_label">Buildings</string>
    <string name="btn_inventory_label">Inventory</string>
    <string name="btn_fighter_deploy_label">Deploy</string>
    <string name="btn_fighter_equip_label">Equip</string>
</resources>
