<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.OverviewActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_current_deployments"
            android:layout_width="395dp"
            android:layout_height="203dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_building_upgrades"
            android:layout_width="395dp"
            android:layout_height="203dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_current_deployments" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_base_projects"
            android:layout_width="395dp"
            android:layout_height="203dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_building_upgrades" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_base_projects"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/btn_map"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_map_label" />

            <Button
                android:id="@+id/btn_cohort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_cohort_label" />

            <Button
                android:id="@+id/btn_overview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_overview_label" />

            <Button
                android:id="@+id/btn_inventory"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_inventory_label" />

            <Button
                android:id="@+id/btn_buildings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/btn_buildings_label" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
